--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,9 +2,14 @@
 <div class="container" >
   <h1>🥗 Restaurants : check them all !</h1>
 
-  <% @restaurants.each do |restaurant| %>
-    <h2><%= restaurant.name %></h2>
-    <p><%= restaurant.address %></p>
-  <% end %>
-
+  <div class="cards">
+    <% @restaurants.each do |restaurant| %>
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/random/800X600)">
+        <p><%= restaurant.name %></p>
+        <%= link_to "See details", restaurant_path(restaurant), class: "btn btn-primary"%>
+      </div>
+    <% end %>
+  </div>
 </div>
+
+
