--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,1 +1,12 @@
-<h1>Create a new review!</h1>
+
+<div class="container">
+
+  <h1>Create a new review! 📝</h1>
+
+  <%= simple_form_for [@restaurant, @review] do |f| %>
+    <%= f.input :content %>
+    <%= f.input :rating %>
+    <%= f.submit "add a review", class: "btn btn-primary" %>
+  <% end %>
+
+</div>
